# angelsimulator2

./: .gitignore  Cargo.toml  README.MD  convert-sprites.sh  custom.js  engelsimulator2.js  index.html
engelsimulator2/: Cargo.toml  convert-sprites.sh
engelsimulator2/src/: gamestate.rs  main.rs
engelsimulator2/src/component/: mod.rs  sanity.rs  sanity_drain.rs
engelsimulator2/src/entity/: barrier_entity.rs  mod.rs  player_entity.rs  sanity_drain.rs
engelsimulator2/src/event/: collision_events.rs  initialize_event.rs  mod.rs
engelsimulator2/src/resource/: heaven_state.rs  heaven_store.rs  ingame_state.rs  ingame_store.rs  input_state.rs  input_store.rs  mod.rs  sprites.rs
engelsimulator2/src/system/: camera_movement_system.rs  cleanup_system.rs  collision_handler_system.rs  gameover_update_system.rs  handle_error_system.rs  heaven_update_system.rs  ingame_termination_system.rs  input_system.rs  mod.rs  player_controller.rs  sanity_drain_system.rs  ui_update_system.rs
engelsimulator2/src/system/startup/: gameover_startup_system.rs  heaven_startup_system.rs  ingame_startup_system.rs  mod.rs
level-parser/: Cargo.toml
level-parser/examples/: print-tags.rs
level-parser/src/: lib.rs
src/: main.rs
src/component/: mod.rs  sanity_drain.rs
src/entity/: mod.rs  player_entity.rs  sanity_drain.rs
src/event/: collision_events.rs
src/resource/: input_state.rs  mod.rs  sprites.rs
src/system/: collision_handler_system.rs  handle_error_system.rs  input_system.rs  mod.rs  player_controller.rs  sanity_drain_system.rs  ui_update_system.rs
src/system/startup/: ingame_startup_system.rs
web/: engelsimulator2.js
