[workspace]

members = [
    "engelsimulator2",
    "level-parser",
]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1

[profile.release]
lto = "thin"
opt-level = "s"
